--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,25 @@
          
     <!-- The project build settings -->
     <build>
+        <finalName>${project.artifactId}-${project.version}</finalName>
+        <sourceDirectory>src</sourceDirectory>
+        <testSourceDirectory>test</testSourceDirectory>
+        <resources>
+            <resource>
+            <directory>src</directory>
+            <excludes>
+                <exclude>**/*.java</exclude>
+            </excludes>
+            </resource>
+        </resources>
+        <testResources>
+            <testResource>
+            <directory>test</directory>
+            <excludes>
+                <exclude>**/*.java</exclude>
+            </excludes>
+            </testResource>
+        </testResources>
         <plugins>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
