--- a/pom.xml
+++ b/pom.xml
@@ -23,12 +23,17 @@
     </properties>
 
     <dependencies>
-        <dependency>
+    <dependency>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-web</artifactId>
+        <version>2.6.2</version>
+    </dependency>
+    <dependency>
         <groupId>junit</groupId>
         <artifactId>junit</artifactId>
         <version>4.11</version>
         <scope>test</scope>
-        </dependency>
+    </dependency>
     </dependencies>
          
     <!-- The project build settings -->
